// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (sorting) sorts rules and configs case-insensitive 1`] = `
"# eslint-plugin-test
Description.
## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🅰️ Set in the \`a\` configuration.\\
🅱️ Set in the \`B\` configuration.\\
🌊 Set in the \`c\` configuration.

| Name                 | 💼         |
| :------------------- | :--------- |
| [a](docs/rules/a.md) | 🅰️ 🅱️ 🌊 |
| [B](docs/rules/B.md) |            |
| [c](docs/rules/c.md) |            |

<!-- end auto-generated rules list -->
more content.

"
`;

exports[`generate (sorting) sorts rules and configs case-insensitive 2`] = `
"# test/a

💼 This rule is enabled in the following configs: 🅰️ \`a\`, 🅱️ \`B\`, 🌊 \`c\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (sorting) sorts rules and configs case-insensitive 3`] = `
"# test/B

<!-- end auto-generated rule header -->
"
`;

exports[`generate (sorting) sorts rules and configs case-insensitive 4`] = `
"# test/c

<!-- end auto-generated rule header -->
"
`;
